# api/class_rooms.pb.go
@@ -35,6 +35,8 @@ type ClassRoom struct {
 	BuildingId           int32             `protobuf:"varint,6,opt,name=building_id,json=buildingId,proto3" json:"building_id,omitempty"`
 	Beacons              []*_type.Beacon   `protobuf:"bytes,7,rep,name=beacons,proto3" json:"beacons,omitempty"`
 	Floor                int32             `protobuf:"varint,8,opt,name=floor,proto3" json:"floor,omitempty"`
+	LocalX               float64           `protobuf:"fixed64,9,opt,name=local_x,json=localX,proto3" json:"local_x,omitempty"`
+	LocalY               float64           `protobuf:"fixed64,10,opt,name=local_y,json=localY,proto3" json:"local_y,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}          `json:"-"`
 	XXX_unrecognized     []byte            `json:"-"`
 	XXX_sizecache        int32             `json:"-"`
@@ -44,7 +46,7 @@ func (m *ClassRoom) Reset()         { *m = ClassRoom{} }
 func (m *ClassRoom) String() string { return proto.CompactTextString(m) }
 func (*ClassRoom) ProtoMessage()    {}
 func (*ClassRoom) Descriptor() ([]byte, []int) {
-	return fileDescriptor_class_rooms_ac1fec3a89c35fad, []int{0}
+	return fileDescriptor_class_rooms_353b0e8430333f78, []int{0}
 }
 func (m *ClassRoom) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_ClassRoom.Unmarshal(m, b)
@@ -120,6 +122,20 @@ func (m *ClassRoom) GetFloor() int32 {
 	return 0
 }
 
+func (m *ClassRoom) GetLocalX() float64 {
+	if m != nil {
+		return m.LocalX
+	}
+	return 0
+}
+
+func (m *ClassRoom) GetLocalY() float64 {
+	if m != nil {
+		return m.LocalY
+	}
+	return 0
+}
+
 type ListClassRoomsRequest struct {
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
@@ -130,7 +146,7 @@ func (m *ListClassRoomsRequest) Reset()         { *m = ListClassRoomsRequest{} }
 func (m *ListClassRoomsRequest) String() string { return proto.CompactTextString(m) }
 func (*ListClassRoomsRequest) ProtoMessage()    {}
 func (*ListClassRoomsRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_class_rooms_ac1fec3a89c35fad, []int{1}
+	return fileDescriptor_class_rooms_353b0e8430333f78, []int{1}
 }
 func (m *ListClassRoomsRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_ListClassRoomsRequest.Unmarshal(m, b)
@@ -161,7 +177,7 @@ func (m *ListClassRoomsResponse) Reset()         { *m = ListClassRoomsResponse{}
 func (m *ListClassRoomsResponse) String() string { return proto.CompactTextString(m) }
 func (*ListClassRoomsResponse) ProtoMessage()    {}
 func (*ListClassRoomsResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_class_rooms_ac1fec3a89c35fad, []int{2}
+	return fileDescriptor_class_rooms_353b0e8430333f78, []int{2}
 }
 func (m *ListClassRoomsResponse) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_ListClassRoomsResponse.Unmarshal(m, b)
@@ -199,7 +215,7 @@ func (m *GetClassRoomRequest) Reset()         { *m = GetClassRoomRequest{} }
 func (m *GetClassRoomRequest) String() string { return proto.CompactTextString(m) }
 func (*GetClassRoomRequest) ProtoMessage()    {}
 func (*GetClassRoomRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_class_rooms_ac1fec3a89c35fad, []int{3}
+	return fileDescriptor_class_rooms_353b0e8430333f78, []int{3}
 }
 func (m *GetClassRoomRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_GetClassRoomRequest.Unmarshal(m, b)
@@ -237,7 +253,7 @@ func (m *CreateClassRoomRequest) Reset()         { *m = CreateClassRoomRequest{}
 func (m *CreateClassRoomRequest) String() string { return proto.CompactTextString(m) }
 func (*CreateClassRoomRequest) ProtoMessage()    {}
 func (*CreateClassRoomRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_class_rooms_ac1fec3a89c35fad, []int{4}
+	return fileDescriptor_class_rooms_353b0e8430333f78, []int{4}
 }
 func (m *CreateClassRoomRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_CreateClassRoomRequest.Unmarshal(m, b)
@@ -275,7 +291,7 @@ func (m *UpdateClassRoomRequest) Reset()         { *m = UpdateClassRoomRequest{}
 func (m *UpdateClassRoomRequest) String() string { return proto.CompactTextString(m) }
 func (*UpdateClassRoomRequest) ProtoMessage()    {}
 func (*UpdateClassRoomRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_class_rooms_ac1fec3a89c35fad, []int{5}
+	return fileDescriptor_class_rooms_353b0e8430333f78, []int{5}
 }
 func (m *UpdateClassRoomRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_UpdateClassRoomRequest.Unmarshal(m, b)
@@ -313,7 +329,7 @@ func (m *DeleteClassRoomRequest) Reset()         { *m = DeleteClassRoomRequest{}
 func (m *DeleteClassRoomRequest) String() string { return proto.CompactTextString(m) }
 func (*DeleteClassRoomRequest) ProtoMessage()    {}
 func (*DeleteClassRoomRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_class_rooms_ac1fec3a89c35fad, []int{6}
+	return fileDescriptor_class_rooms_353b0e8430333f78, []int{6}
 }
 func (m *DeleteClassRoomRequest) XXX_Unmarshal(b []byte) error {
 	return xxx_messageInfo_DeleteClassRoomRequest.Unmarshal(m, b)
@@ -554,46 +570,48 @@ var _ClassRoomService_serviceDesc = grpc.ServiceDesc{
 	Metadata: "class_rooms.proto",
 }
 
-func init() { proto.RegisterFile("class_rooms.proto", fileDescriptor_class_rooms_ac1fec3a89c35fad) }
+func init() { proto.RegisterFile("class_rooms.proto", fileDescriptor_class_rooms_353b0e8430333f78) }
 
-var fileDescriptor_class_rooms_ac1fec3a89c35fad = []byte{
-	// 608 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x95, 0xcd, 0x6e, 0xd3, 0x40,
-	0x10, 0xc7, 0xb5, 0x6d, 0xd3, 0x36, 0x93, 0xd2, 0xd2, 0x25, 0x04, 0xcb, 0x44, 0x10, 0x59, 0xa0,
-	0x06, 0x24, 0x6c, 0x08, 0xe2, 0x00, 0xe5, 0x42, 0x53, 0x3e, 0x2a, 0x71, 0x32, 0x70, 0xe1, 0x40,
-	0x58, 0xdb, 0x5b, 0xb3, 0xaa, 0xe3, 0x35, 0xde, 0x75, 0xa5, 0x0a, 0x71, 0x81, 0x2b, 0x70, 0xe1,
-	0x29, 0x78, 0x0c, 0x9e, 0x81, 0x57, 0xe0, 0x11, 0x78, 0x00, 0xe4, 0xb5, 0xe3, 0x7c, 0xe0, 0x1a,
-	0x73, 0xe0, 0x96, 0x9d, 0xf1, 0xcc, 0xff, 0xb7, 0x33, 0x7f, 0x6d, 0x60, 0xdb, 0x0d, 0x88, 0x10,
-	0xa3, 0x98, 0xf3, 0xb1, 0x30, 0xa3, 0x98, 0x4b, 0x8e, 0x75, 0x9f, 0x7a, 0x3c, 0x66, 0xe1, 0x51,
-	0x62, 0x4a, 0x91, 0xf8, 0xcc, 0xe3, 0x47, 0x7c, 0x24, 0x68, 0x7c, 0x4c, 0x63, 0xbd, 0xeb, 0x73,
-	0xee, 0x07, 0xd4, 0x22, 0x11, 0xb3, 0x48, 0x18, 0x72, 0x49, 0x24, 0xe3, 0x61, 0x5e, 0xa9, 0x5f,
-	0xcc, 0xb3, 0xea, 0xe4, 0x24, 0x87, 0x16, 0x1d, 0x47, 0xf2, 0x24, 0x4f, 0x6e, 0xcb, 0x93, 0x88,
-	0x5a, 0x0e, 0x25, 0x2e, 0x0f, 0xf3, 0x50, 0x5b, 0x85, 0x24, 0xf1, 0x47, 0x2e, 0x4f, 0x42, 0x99,
-	0x45, 0x8d, 0xef, 0x4b, 0xd0, 0x1c, 0xa6, 0x54, 0x36, 0xe7, 0x63, 0x6c, 0xc0, 0x99, 0x29, 0xe2,
-	0x88, 0x79, 0x1a, 0xea, 0xa1, 0x7e, 0xc3, 0x6e, 0xb9, 0x93, 0x2f, 0x0e, 0x3c, 0x8c, 0x61, 0x25,
-	0x24, 0x63, 0xaa, 0x2d, 0xf5, 0x50, 0xbf, 0x69, 0xab, 0xdf, 0x58, 0x87, 0xf5, 0x80, 0x48, 0x26,
-	0x13, 0x8f, 0x6a, 0xcb, 0x3d, 0xd4, 0x47, 0x76, 0x71, 0xc6, 0x5d, 0x68, 0x06, 0x3c, 0xf4, 0xb3,
-	0xe4, 0x8a, 0x4a, 0x4e, 0x03, 0xf8, 0x09, 0x40, 0x81, 0x24, 0xb4, 0x46, 0x6f, 0xb9, 0xdf, 0x1a,
-	0x5c, 0x33, 0x4f, 0x1f, 0x8a, 0x99, 0xde, 0xc2, 0x7c, 0x4e, 0xfc, 0x61, 0x5a, 0x61, 0x37, 0x65,
-	0xfe, 0x4b, 0xe0, 0xcb, 0xd0, 0x72, 0x12, 0x16, 0x78, 0x2c, 0xf4, 0x53, 0xf2, 0x55, 0x45, 0x0e,
-	0x93, 0xd0, 0x81, 0x87, 0x1f, 0xc0, 0x5a, 0x36, 0x10, 0xa1, 0xad, 0x29, 0x9d, 0x9d, 0xbf, 0xea,
-	0xec, 0xa9, 0xef, 0xed, 0x49, 0x1d, 0x6e, 0x43, 0xe3, 0x30, 0xe0, 0x3c, 0xd6, 0xd6, 0x55, 0xf7,
-	0xec, 0x60, 0x5c, 0x80, 0xf3, 0x4f, 0x99, 0x90, 0xc5, 0x18, 0x85, 0x4d, 0xdf, 0x26, 0x54, 0x48,
-	0xe3, 0x35, 0x74, 0x16, 0x13, 0x22, 0xe2, 0xa1, 0xa0, 0xf8, 0x11, 0xb4, 0x66, 0xbc, 0xa0, 0x21,
-	0xc5, 0x73, 0xb5, 0x8a, 0xa7, 0x68, 0x62, 0x43, 0xb1, 0x0d, 0x61, 0xdc, 0x85, 0x73, 0x8f, 0xe9,
-	0x54, 0x20, 0x17, 0xae, 0xb3, 0x47, 0xe3, 0x15, 0x74, 0x86, 0x31, 0x25, 0x92, 0xfe, 0x51, 0xbd,
-	0x0f, 0x30, 0xad, 0x56, 0xa5, 0xb5, 0xd9, 0x9a, 0x85, 0x42, 0xda, 0xff, 0x45, 0xe4, 0xfd, 0xbf,
-	0xfe, 0xf7, 0xa1, 0xb3, 0x4f, 0x03, 0x5a, 0xd2, 0xbf, 0xc6, 0xed, 0x07, 0xbf, 0x1a, 0x70, 0xb6,
-	0x28, 0x7c, 0x46, 0xe3, 0x63, 0xe6, 0x52, 0xfc, 0x19, 0xc1, 0xe6, 0xfc, 0xc2, 0xf0, 0xad, 0x2a,
-	0xae, 0xd2, 0xad, 0xeb, 0x83, 0x7f, 0x29, 0xc9, 0xfc, 0x60, 0xb4, 0x3f, 0xfc, 0xf8, 0xf9, 0x75,
-	0x69, 0x13, 0x6f, 0x58, 0x33, 0xb6, 0xc0, 0x9f, 0x10, 0x6c, 0xcc, 0xae, 0x17, 0x5b, 0x55, 0xad,
-	0x4b, 0x8c, 0xa0, 0xd7, 0x1b, 0xab, 0x71, 0x45, 0xc9, 0x5f, 0xc2, 0xdd, 0x59, 0x79, 0xeb, 0xdd,
-	0xdc, 0x14, 0xdf, 0xe3, 0x2f, 0x08, 0xb6, 0x16, 0x2c, 0x83, 0x2b, 0x2f, 0x5b, 0xee, 0xaf, 0xba,
-	0x50, 0x3d, 0x05, 0xa5, 0x1b, 0x73, 0x33, 0xb9, 0x37, 0x63, 0x1d, 0xfc, 0x0d, 0xc1, 0xd6, 0x82,
-	0xc7, 0xaa, 0x81, 0xca, 0x0d, 0x59, 0x17, 0x68, 0x57, 0x01, 0xdd, 0x19, 0xec, 0x9c, 0x36, 0x25,
-	0x73, 0x7e, 0x60, 0x73, 0xac, 0x1f, 0x11, 0x6c, 0x2d, 0xf8, 0xb5, 0x9a, 0xb5, 0xdc, 0xdc, 0x7a,
-	0xc7, 0xcc, 0xde, 0x7d, 0x73, 0xf2, 0xee, 0x9b, 0x0f, 0xd3, 0x77, 0x7f, 0xb2, 0xc2, 0xeb, 0x95,
-	0x2b, 0xdc, 0x1b, 0xbc, 0xbc, 0xe9, 0x33, 0xf9, 0x26, 0x71, 0x4c, 0x97, 0x8f, 0xad, 0x42, 0xdd,
-	0x2a, 0xd4, 0x6f, 0x64, 0xea, 0xe9, 0x7f, 0xce, 0x2e, 0x89, 0xd8, 0x28, 0x72, 0x9c, 0x55, 0xa5,
-	0x74, 0xfb, 0x77, 0x00, 0x00, 0x00, 0xff, 0xff, 0x2f, 0xee, 0x73, 0xbe, 0xbe, 0x06, 0x00, 0x00,
+var fileDescriptor_class_rooms_353b0e8430333f78 = []byte{
+	// 629 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xb4, 0x55, 0xcd, 0x6e, 0xd3, 0x40,
+	0x10, 0x96, 0xdb, 0xa6, 0x6d, 0x26, 0xa5, 0xa5, 0x4b, 0x49, 0x2d, 0x53, 0x41, 0x64, 0x81, 0x1a,
+	0x90, 0xb0, 0x21, 0x88, 0x03, 0x94, 0x0b, 0x6d, 0xf9, 0xa9, 0xc4, 0xc9, 0x80, 0x04, 0x1c, 0x30,
+	0x6b, 0x7b, 0x6b, 0x56, 0x75, 0xbc, 0xc6, 0xbb, 0xae, 0x88, 0x10, 0x17, 0xb8, 0x02, 0x17, 0x9e,
+	0x82, 0xe7, 0xe1, 0x15, 0x78, 0x03, 0x78, 0x00, 0xe4, 0xb5, 0xe3, 0x38, 0xc1, 0x35, 0xe6, 0xc0,
+	0xcd, 0x3b, 0xe3, 0x99, 0xef, 0x9b, 0x6f, 0x3e, 0x69, 0x60, 0xdd, 0x0d, 0x30, 0xe7, 0x76, 0xcc,
+	0xd8, 0x90, 0x1b, 0x51, 0xcc, 0x04, 0x43, 0x9a, 0x4f, 0x3c, 0x16, 0xd3, 0xf0, 0x28, 0x31, 0x04,
+	0x4f, 0x7c, 0xea, 0xb1, 0x23, 0x66, 0x73, 0x12, 0x1f, 0x93, 0x58, 0xdb, 0xf2, 0x19, 0xf3, 0x03,
+	0x62, 0xe2, 0x88, 0x9a, 0x38, 0x0c, 0x99, 0xc0, 0x82, 0xb2, 0x30, 0xaf, 0xd4, 0xce, 0xe5, 0x59,
+	0xf9, 0x72, 0x92, 0x43, 0x93, 0x0c, 0x23, 0x31, 0xca, 0x93, 0xeb, 0x62, 0x14, 0x11, 0xd3, 0x21,
+	0xd8, 0x65, 0x61, 0x1e, 0xda, 0x90, 0x21, 0x81, 0x7d, 0xdb, 0x65, 0x49, 0x28, 0xb2, 0xa8, 0xfe,
+	0x73, 0x0e, 0xda, 0x7b, 0x29, 0x2b, 0x8b, 0xb1, 0x21, 0xd2, 0xe1, 0xd4, 0x84, 0xa2, 0x4d, 0x3d,
+	0x55, 0xe9, 0x29, 0xfd, 0x96, 0xd5, 0x71, 0xc7, 0x7f, 0x1c, 0x78, 0x08, 0xc1, 0x42, 0x88, 0x87,
+	0x44, 0x9d, 0xeb, 0x29, 0xfd, 0xb6, 0x25, 0xbf, 0x91, 0x06, 0xcb, 0x01, 0x16, 0x54, 0x24, 0x1e,
+	0x51, 0xe7, 0x7b, 0x4a, 0x5f, 0xb1, 0x8a, 0x37, 0xda, 0x82, 0x76, 0xc0, 0x42, 0x3f, 0x4b, 0x2e,
+	0xc8, 0xe4, 0x24, 0x80, 0x1e, 0x02, 0x14, 0x94, 0xb8, 0xda, 0xea, 0xcd, 0xf7, 0x3b, 0x83, 0xcb,
+	0xc6, 0xc9, 0xa2, 0x18, 0xe9, 0x14, 0xc6, 0x13, 0xec, 0xef, 0xa5, 0x15, 0x56, 0x5b, 0xe4, 0x5f,
+	0x1c, 0x5d, 0x80, 0x8e, 0x93, 0xd0, 0xc0, 0xa3, 0xa1, 0x9f, 0x32, 0x5f, 0x94, 0xcc, 0x61, 0x1c,
+	0x3a, 0xf0, 0xd0, 0x5d, 0x58, 0xca, 0x04, 0xe1, 0xea, 0x92, 0xc4, 0xd9, 0xfe, 0x2b, 0xce, 0xae,
+	0xfc, 0xdf, 0x1a, 0xd7, 0xa1, 0x0d, 0x68, 0x1d, 0x06, 0x8c, 0xc5, 0xea, 0xb2, 0xec, 0x9e, 0x3d,
+	0xd0, 0x26, 0x2c, 0x05, 0xcc, 0xc5, 0x81, 0xfd, 0x56, 0x6d, 0xcb, 0xf9, 0x16, 0xe5, 0xf3, 0xd9,
+	0x24, 0x31, 0x52, 0xa1, 0x94, 0x78, 0xae, 0x6f, 0xc2, 0xd9, 0x47, 0x94, 0x8b, 0x42, 0x78, 0x6e,
+	0x91, 0x37, 0x09, 0xe1, 0x42, 0x7f, 0x05, 0xdd, 0xd9, 0x04, 0x8f, 0x58, 0xc8, 0x09, 0xba, 0x0f,
+	0x9d, 0x92, 0x7b, 0x54, 0x45, 0x4e, 0x70, 0xa9, 0x6e, 0x82, 0xa2, 0x89, 0x05, 0xc5, 0xfe, 0xb8,
+	0x7e, 0x0b, 0xce, 0x3c, 0x20, 0x13, 0x80, 0x1c, 0xb8, 0xc9, 0xe6, 0xf5, 0x97, 0xd0, 0xdd, 0x8b,
+	0x09, 0x16, 0xe4, 0x8f, 0xea, 0x7d, 0x80, 0x49, 0xb5, 0x2c, 0x6d, 0xcc, 0xad, 0x5d, 0x20, 0xa4,
+	0xfd, 0x9f, 0x46, 0xde, 0xff, 0xeb, 0x7f, 0x07, 0xba, 0xfb, 0x24, 0x20, 0x15, 0xfd, 0x1b, 0x4c,
+	0x3f, 0xf8, 0xd5, 0x82, 0xd3, 0x45, 0xe1, 0x63, 0x12, 0x1f, 0x53, 0x97, 0xa0, 0xcf, 0x0a, 0xac,
+	0x4e, 0x2f, 0x0c, 0x5d, 0xaf, 0xe3, 0x55, 0xb9, 0x75, 0x6d, 0xf0, 0x2f, 0x25, 0x99, 0x1f, 0xf4,
+	0x8d, 0x0f, 0xdf, 0x7f, 0x7c, 0x9d, 0x5b, 0x45, 0x2b, 0x66, 0xc9, 0x16, 0xe8, 0x93, 0x02, 0x2b,
+	0xe5, 0xf5, 0x22, 0xb3, 0xae, 0x75, 0x85, 0x11, 0xb4, 0x66, 0xb2, 0xea, 0x17, 0x25, 0xfc, 0x79,
+	0xb4, 0x55, 0x86, 0x37, 0xdf, 0x4d, 0xa9, 0xf8, 0x1e, 0x7d, 0x51, 0x60, 0x6d, 0xc6, 0x32, 0xa8,
+	0x76, 0xd8, 0x6a, 0x7f, 0x35, 0x25, 0xd5, 0x93, 0xa4, 0x34, 0x7d, 0x4a, 0x93, 0xdb, 0x25, 0xeb,
+	0xa0, 0x6f, 0x0a, 0xac, 0xcd, 0x78, 0xac, 0x9e, 0x50, 0xb5, 0x21, 0x9b, 0x12, 0xda, 0x91, 0x84,
+	0x6e, 0x0e, 0xb6, 0x4f, 0x52, 0xc9, 0x98, 0x16, 0x6c, 0x8a, 0xeb, 0x47, 0x05, 0xd6, 0x66, 0xfc,
+	0x5a, 0xcf, 0xb5, 0xda, 0xdc, 0x5a, 0xd7, 0xc8, 0x2e, 0x85, 0x31, 0xbe, 0x14, 0xc6, 0xbd, 0xf4,
+	0x52, 0x8c, 0x57, 0x78, 0xa5, 0x76, 0x85, 0xbb, 0x83, 0x17, 0xd7, 0x7c, 0x2a, 0x5e, 0x27, 0x8e,
+	0xe1, 0xb2, 0xa1, 0x59, 0xa0, 0x9b, 0x05, 0xfa, 0xd5, 0x0c, 0x3d, 0xbd, 0x52, 0x3b, 0x38, 0xa2,
+	0x76, 0xe4, 0x38, 0x8b, 0x12, 0xe9, 0xc6, 0xef, 0x00, 0x00, 0x00, 0xff, 0xff, 0x78, 0xcf, 0x77,
+	0x84, 0xf0, 0x06, 0x00, 0x00,
 }
